<resources>
    <string name="app_name">RandomContact</string>
    <string name="action_basic_settings">Basic Settings</string>
    <string name="action_advanced_settings">Advanced Settings</string>
    <string name="search_hint">Input keyword</string>

    <string name="contacts_generate">Generate</string>
    <string name="contacts">Contacts</string>
    <string name="no_contacts">no contacts</string>

    <string name="simple_info">Name and Phone Only</string>
    <string name="multi_info">All Types</string>
    <string name="contacts_count">count</string>

    <string name="multi_numbers">Multi numbers</string>
    <string name="same_contact_repeat">Same repeat</string>

    <string name="ok">OK</string>
    <string name="reset">reset</string>

    <string name="nothing_generate">nothing will be generated, please check settings</string>
    <string name="follow_settings_hint">Set the build options in settings activity</string>

    <string name="keyback_hint">press again to exit</string>

    <string name="toast_empty_counts">empty count not allowed</string>
    <string name="toast_invalid_number">invalid number</string>

    <string name="loading_dialog_title">generating</string>
    <string name="loading_dialog_message">please wait.......</string>

    <string name="message_generate_finish">finish</string>
    <string name="message_generate_cancel">cancel</string>

    <string name="settings_title">Settings</string>
    <string name="generate_display_name">generate display name</string>
    <string name="generate_nick_name">generate nick name</string>
    <string name="generate_phone_number">generate phone number</string>
    <string name="generate_event_number">generate event(like birthday and so on)</string>
    <string name="generate_email">generate email</string>
    <string name="generate_postal">generate postal</string>
    <string name="generate_im">generate IM</string>
    <string name="generate_org">generate organization</string>
    <string name="generate_photo">generate photo</string>
    <string name="generate_note">generate note</string>
    <string name="generate_web_site">generate web site</string>
    <string name="save_success">save success</string>
    <string name="save_settings">save settings</string>
    <string name="title_activity_advanced_settings">Advanced Settings</string>

    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="label_display_name">display name</string>
    <string name="min_length">min length</string>
    <string name="max_length">max length</string>
    <string name="min_count">min count</string>
    <string name="max_count">max count</string>
    <string name="label_phone_number">phone number</string>
    <string name="label_event">event(like birthday and so on)</string>
    <string name="label_email">email</string>
    <string name="label_postal">postal</string>
    <string name="label_im">IM</string>
    <string name="label_org">organization</string>
    <string name="label_note">note</string>
    <string name="label_web_site">web site</string>

    <string name="circle_seek_dialog_title">Value Set</string>
    
    <string name="number_of_contacts">the number of contacts is %1$d</string>
    
    <string name="contacts_permission_request">please grant contacts read/write permission.</string>
</resources>
