<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">
    <cn.appleye.randomcontact.widget.ClearEditText
        android:id="@+id/contacts_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingTop="8dip"
        android:paddingBottom="8dip"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:layout_marginTop="8dip"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginBottom="8dip"
        android:background="@null"
        android:inputType="numberDecimal"
        android:hint="@string/contacts_count" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="4dip"
        android:paddingRight="4dip"
        android:gravity="center_vertical|center_horizontal">
        <cn.appleye.randomcontact.widget.CheckableTextView
            android:id="@+id/same_repeat_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:text="@string/same_contact_repeat"
            android:textColor="#71bfe3" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reset_button_bg"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:textColor="#eef1f8"
            android:textSize="18sp"
            android:text="@string/reset"/>
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:textColor="#eef1f8"
            android:textSize="18sp"
            android:text="@string/ok"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#91acc9"
        android:background="#f6f9fe"
        android:paddingLeft="8dip"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingRight="8dip"
        android:text="@string/follow_settings_hint" />
</LinearLayout>